--- a/huggingface2conll_with_mapping.ipynb
+++ b/huggingface2conll_with_mapping.ipynb
@@ -96,6 +96,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Defining important functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
@@ -186,6 +193,13 @@
     "            else:\n",
     "                break\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Main execution"
    ]
   },
   {
@@ -403,7 +417,6 @@
     }
    ],
    "source": [
-    "# Main execution\n",
     "if __name__ == \"__main__\":\n",
     "    # Load the dataset\n",
     "    ds = load_dataset(\"tomaarsen/conll2002\", \"es\")\n",
