--- a/huggingface2conll_without_mapping.ipynb
+++ b/huggingface2conll_without_mapping.ipynb
@@ -77,6 +77,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import required libraries"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -92,7 +99,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Import required libraries"
+    "# Defining important functions"
    ]
   },
   {
@@ -128,17 +135,8 @@
     "    train_dataset = dataset.select(train_indices)\n",
     "    dev_dataset = dataset.select(dev_indices)\n",
     "\n",
-    "    return train_dataset, dev_dataset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "id": "Zz6evNkwMqv0"
-   },
-   "outputs": [],
-   "source": [
+    "    return train_dataset, dev_dataset\n",
+    "\n",
     "\n",
     "def export_to_conll(dataset, output_file, format_type='simple'):\n",
     "    with open(output_file, 'w', encoding='utf-8') as f:\n",
@@ -155,17 +153,8 @@
     "                elif format_type == 'detailed':\n",
     "                    f.write(f\"{token} -X- _ {tag}\\n\")\n",
     "\n",
-    "            f.write(\"\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "id": "6p3djI09Mqv1"
-   },
-   "outputs": [],
-   "source": [
+    "            f.write(\"\\n\")\n",
+    "\n",
     "def print_first_lines(filename, n=5):\n",
     "    print(f\"First {n} lines of {filename}:\")\n",
     "    with open(filename, 'r', encoding='utf-8') as f:\n",
@@ -175,6 +164,13 @@
     "            else:\n",
     "                break\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Main execution"
    ]
   },
   {
@@ -392,7 +388,6 @@
     }
    ],
    "source": [
-    "# Main execution\n",
     "if __name__ == \"__main__\":\n",
     "    # Load the dataset\n",
     "    ds = load_dataset(\"tomaarsen/conll2002\", \"es\")\n",
